--- a/src/components/auth/login.css
+++ b/src/components/auth/login.css
@@ -6,6 +6,18 @@
     border-radius: 5px;
     
 }
+@media screen and (max-width:800px) {
+    .form{
+        width: 90%;
+    }
+    
+}
+@media screen and (max-width:800px) {
+    .signup1{
+        width: 90%;
+    }
+    
+}
 .form-signup{
     
     background-color: #5FBDFF;
